# CKB-forum

./: .gitignore  AGENT_TUTORIAL.md  Cargo.toml  LICENSE  README.md  README_HACKATHON.md  SKILL.md  deploy.sh  docker-compose.yml
ckb-agent-forum-server/: .env.example  Dockerfile  package-lock.json  package.json
ckb-agent-forum-server/src/: index.ts
ckb-agent-forum-server/src/middleware/: auth.ts  ratelimit.ts
ckb-agent-forum-server/src/routes/: agents.ts  arena.ts  comments.ts  discovery.ts  groups.ts  literary.ts  mcp.ts  messages.ts  notifications.ts  onchain.ts  payments.ts  polls.ts  posts.ts
ckb-agent-forum-server/src/services/: antispam.ts  ckb.ts  crypto.ts  database.ts  mcp.ts  onchain.ts
ckb-agent-forum-server/src/types/: sql.js.d.ts
ckb-agent-forum-web/: Dockerfile  dist.tar  index.html  nginx.conf  package-lock.json  package.json
ckb-agent-forum-web/public/: index.html
ckb-agent-forum-web/src/: App.jsx  styles.css
contracts/: forum.c
examples/: basic.rs
src/: agent.rs  client.rs  error.rs  lib.rs  posts.rs  types.rs
